solidui-web/src/pages/Designer/Preview/preview.less
/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

#preview {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: #fff;
}
.featbar-wrapper {
	display: flex;
	align-items: center;
	background-color: #38383890;
	padding-right: 15px;
	border: 1px solid #2f2f2f90;
	.featbar-divider {
		width: 1px;
		height: 15px;
		margin: 0 15px;
		border-left: 1px solid #cfcfcf;
	}
	.featbar-scene {
		display: flex;
		.feature-select {
			min-width: 150px;
			height: 30px;
			font-size: 14px;
			color: #cfcfcf;
			.rc-select-arrow {
				top: 4px;
			}
			.rc-select-selector {
				.rc-select-selection-search-input {
					height: 30px;
					font-size: 0px;
					cursor: pointer;
				}
				.rc-select-selection-item,
				.rc-select-selection-placeholder {
					padding: 0 15px;
					color: #cfcfcf;
					opacity: 1;
					left: 0;
					top: 0;
					right: 0;
					bottom: 0;
					text-align: center;
					line-height: 30px;
				}
			}
		}
	}
	.featbar-page {
		font-size: 14px;
		display: flex;
		justify-content: space-between;
		align-items: center;
		.page_title {
			display: inline-block;
			text-align: center;
			color: #cfcfcf;
			margin: 0 12px;
		}
		.left_arrows,
		.right_arrows {
			cursor: pointer;
			.anticon {
				font-size: 14px;
				color: #cfcfcf;
			}
		}
	}
	.featbar-tools {
		display: flex;
		color: #cfcfcf;
		.anticon {
			cursor: pointer;
			font-size: 16px;
			color: #cfcfcf;
		}
	}
}

